change link color to try and fix contrast issue by Wave tool

--- a/style.css
+++ b/style.css
@@ -25,3 +25,6 @@ footer{
     grid-column: 1/4;
     text-align: center;
 }
+a{
+    color: rgb(0, 255, 128);
+}
